cholera 0.5.1.9027
==================

- amend profile2D().
- amend landmarkData(). 


cholera 0.5.1.9026
==================

- profilePlot() -> profile2D() and profile3D().
- highlightStree() -> streetHighlight().


cholera 0.5.1.9025
==================

- add addNeighborhoodEuclidean() prototype.
- add landmarkData() prototype.


cholera 0.5.1.9024
==================

- addNeighborhood() -> addNeighborhoodWalking().
- copyedit READMEs.


cholera 0.5.1.9023
==================

- remove pump.subset from neighborhoodEuclidean().


cholera 0.5.1.9022
==================

- un-export profilePerspective().


cholera 0.5.1.9021
==================

- add highlightStreet().
- allow negative selection for 'threejs' profilePlot().
- allow pump selection for 'base' and 'ggplot2' profilePlot().


cholera 0.5.1.9020
==================

- rename addCases() to addNeighborhoodCases().
- add new addCases().


cholera 0.5.1.9019
==================

- add alpha transparency to 'threejs' profilePlot().


cholera 0.5.1.9018
==================

- color points by neighborhood in profilePlot().


cholera 0.5.1.9017
==================

- move pumpTokens() to pumpTokens.R.
- add "area.polygons" prototype warning to plot.euclidean().
- note Argyll House.
- amend neighborhoodEuclidean() and plot.euclidean().
- add 'threejs' prototype to profilePlot().


cholera 0.5.1.9016
==================

- add prototype "area.points" and "area.polygons" types to plot.euclidean().


cholera 0.5.1.9015
==================

- add ellipsis to plot.neighborhood_data().


cholera 0.5.1.9014
==================

- add plot.neighborhood_data() to visualize road network.
- copyedit pump neighborhoods and time series docs and vignettes.


cholera 0.5.1.9013
==================

- add embed argument to neighborhoodData().


cholera 0.5.1.9012
==================

- match caseLocator() and pumpLocator().


cholera 0.5.1.9011
==================

- provisionally add Earl of Aberdeen residence.