@@ -2,7 +2,8 @@ cholera 0.5.1.9027
 ==================
 
 - amend profile2D().
-- amend landmarkData(). 
+- amend landmarkData().
+- fix snow.colors in pumpTokens().
 
 
 cholera 0.5.1.9026
